[gd_scene load_steps=15 format=2]

[ext_resource path="res://Escenas/Guardar/NG.tscn" type="PackedScene" id=1]
[ext_resource path="res://Textures/bg.png" type="Texture" id=2]
[ext_resource path="res://Escenas/SFX/SFX.tscn" type="PackedScene" id=3]
[ext_resource path="res://Font/pixeled/Pixeled.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/Menus/MenuScore.gd" type="Script" id=5]
[ext_resource path="res://Textures/restart.png" type="Texture" id=6]
[ext_resource path="res://Music/Music3.ogg" type="AudioStream" id=7]
[ext_resource path="res://Textures/Black.png" type="Texture" id=8]
[ext_resource path="res://Textures/trash.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="DynamicFont" id=3]
size = 6
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="MenuScore" type="Node2D"]
script = ExtResource( 5 )

[node name="fondo" type="Sprite" parent="."]
position = Vector2( 1496, -328 )
scale = Vector2( 6, 6 )
texture = ExtResource( 2 )

[node name="NG" parent="." instance=ExtResource( 1 )]

[node name="SFX" parent="." instance=ExtResource( 3 )]

[node name="music" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 240, 136 )
stream = ExtResource( 7 )

[node name="info" type="Node2D" parent="."]

[node name="Label" type="Label" parent="info"]
margin_right = 512.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "Total Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="info"]
margin_top = 56.0
margin_right = 512.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="TouchScreenButton" parent="."]
scale = Vector2( 2, 2 )
normal = ExtResource( 6 )
shape = SubResource( 2 )

[node name="removescore" type="TouchScreenButton" parent="."]
position = Vector2( 432, 240 )
normal = ExtResource( 9 )
shape = SubResource( 2 )

[node name="Label2" type="Label" parent="."]
margin_left = 363.0
margin_top = 200.0
margin_right = 523.0
margin_bottom = 260.0
custom_fonts/font = SubResource( 3 )
text = "Delete your Score"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="black" type="Sprite" parent="."]
position = Vector2( 304, 200 )
scale = Vector2( 10.5, 7.25 )
texture = ExtResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="black"]
anims/end = SubResource( 4 )
anims/start = SubResource( 5 )
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="removescore" to="." method="_on_removescore_pressed"]
[connection signal="animation_finished" from="black/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
